2016-09-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (filter_exists): Correct grammar.

2016-09-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (init_find_by_value, free_find_by_value): Standardise
	formatting.

2016-09-21  Matthew Mundell <matthew.mundell@greenbone.net>

	Add support for connecting to Manager over a UNIX socket.

	* src/gsad.c (main): Add option --munix-socket.  Pass to omp_init.

	* src/gsad_omp.c: Everywhere that used a session, use a connection
	instead.
	(manager_use_tls): New variable.
	(omp_init): Take both addresses, and init accordingly.

	* src/gsad_omp.h: Update header accordingly.

2016-09-21  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/gsad.xsl (autorefresh [html-header-meta]): Enable
	auto-refresh on dashboard pages.

	* src/html/classic/js/greenbone.js (on_ready): Change auto-refresh
	dropdown selection to "No auto-refresh" while auto-refresh is disabled.

2016-09-21  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (date-diff-text): New function.  Text
	generator from date-diff.
	(date-diff): Move text generation to new function date-diff-text.
	(task [details]): Add duration of last scan and average scan duration.

2016-09-15  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad.c (handle_request): Add "guest" element to help page XML.

2016-09-14  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad_omp.c (next_page_url, action_result_page)
	(response_from_entity): Add static function prototypes.
	(check_modify_config): Always return the response and indicate success
	with a output parameter.  Use response_from_entity or
	action_result_page to create responses.  Also add parameters for
	request params and next pages.
	(save_osp_prefs): Always return the response and use success output
	parameter like check_modify_config.
	(save_config_omp): Adapt to new save_config_omp and save_osp_prefs.